# aeon

./: .all-contributorsrc  .codecov.yml  .coveragerc  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  02a_classification_multivariate_cnn.ipynb  AGENTS.md  AI_POLICY.md  CHANGELOG.md  CITATION.cff  CNAME  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  ESTIMATOR_OVERVIEW.md  GOVERNANCE.md  LICENSE  MANIFEST.in  Makefile  PR.md  README.md  README_OLD.md  benchmark_distances.py  conftest.py  e -i 83d9cb3e  file_path  fix_backticks.py  index.html  mydataset  pyproject.toml  requirements.txt  setup.cfg  sweep.yaml  temp.pkl  test.py  test_hidalgo_fix.py
.binder/: Dockerfile  noDockerfile
.cursor/rules/: activate-venv.mdc
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml  release.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  doc_improvement.md  doc_improvement.yml  feature_request.md  feature_request.yml  maintenance.md  other_issue.yml  sweep.yml
.github/actions/: numba_cache.yml
.github/scripts/: _numba_st_mtime_cache.py  _numba_timestamp_cache.py  _save_numba_cache_timestamp.py  self_assign.py
.github/utilities/: _commons.py  ai_pull_request.py  ai_spam.py  changelog_generator.py  codespell_ignore_words.txt  generate_developer_tables.py  issue_assign.py  pr_labeler.py  pr_open_commenter.py  pr_welcome_edited.py  pr_welcome_updater.py  remove_good_first_issue.py  run_examples.sh  uncheck_welcome_boxes.py
.github/workflows/: ai_spam.yml  auto_sync.yml  cancel.yml  check_dependabot.yml  codespell.yml  fast_release.yml  github_maintenace.yml  issue_assigned.yml  issue_comment_edited.yml  issue_comment_posted.yml  monthly_github_maintenance.yml  periodic_github_maintenace.yml  periodic_pip_cache.yml  periodic_test_run.yml  periodic_tests.yml  pr_core_dep_import.yml  pr_examples.yml  pr_label_edited.yml  pr_labelled.yml  pr_opened.yml  pr_pre_commit.yml  pr_precommit.yml  pr_pytest.yml  pr_tests.yml  pr_typecheck.yml  precommit_autoupdate.yml  release.yml  scorecard.yml  self_assign_bot.yml  test.yml  update_contributors.yml  update_pip_cache.yml  weekly_github_maintenance.yml  wheels.yml
aeon/: __init__.py  _config.py  exceptions.py
aeon/annotation/: __init__.py  clasp.py  datagen.py  eagglo.py  ggs.py  hmm.py  igts.py  stray.py
aeon/anomaly_detection/: __init__.py  _cblof.py  _copod.py  _dwt_mlead.py  _eif.py  _hampel.py  _idk.py  _iforest.py  _kmeans.py  _left_stampi.py  _lof.py  _lstm_ad.py  _madrid.py  _merlin.py  _one_class_svm.py  _pyodadapter.py  _rockad.py  _stomp.py  _stray.py  base.py
aeon/base/: __init__.py  _base.py  _base_collection.py  _base_series.py  _cache.py  _compose.py  _meta.py  _serialize.py
aeon/benchmarking/: __init__.py  _critical_difference.py  _significance_plots.py  benchmarks.py  cliques.py  critical_difference.py  data.py  evaluation.py  experiments.py  forecasting.py  metrics.py  orchestration.py  plotting_tools.py  published_results.py  resampling.py  results.py  results_getter.py  results_loaders.py  results_plotting.py  results_stats.py  results_tests.py  stats.py  strategies.py  tasks.py  utils.py
aeon/classification/: __init__.py  _delegate.py  _dummy.py  base.py  dummy.py
aeon/clustering/: __init__.py  _agglomerative.py  _agglomerativeClustering.py  _clara.py  _clarans.py  _cluster_initialisation.py  _clustering_tags.py  _elastic_som.py  _k_graph.py  _k_means.py  _k_medoids.py  _k_sc.py  _k_shape.py  _k_shape2.py  _k_shape_original.py  _k_shape_test.py  _k_shapes.py  _kasba.py  _kernel_k_means.py  _kshape_compare.py  _original_kshape.py  _original_kshape_simple.py  _private_kshape.py  (+16 more)
benchmarks/: README.md  asv.conf.json  process_global_bencmarks.py
build_tools/: changelog.py  changelog_generator.py  check_install_from_test_pypi.sh  comment_pr_labeler.py  fail_on_missing_init_files.sh  generate_developer_tables.py  issue_assign.py  make_release.py  pr_labeler.py  pr_open_commenter.py  pr_title_labeler.py  pr_welcome_edited.py  run_examples.sh
docs/: Makefile  about.md  api_reference.md  api_reference.rst  changelog.md  changelog.rst  code_of_conduct.md  completed_projects.md  conf.py  contributing.md  contributors.md  deprecation.rst  developer_guide.md  developer_guide.rst  developers.rst  estimator_overview.md  examples.md  get_involved.rst  get_started.rst  getting_started.md  glossary.md  governance.md  index.md  installation.md  installation.rst  make.bat  mentoring.md  papers_using_aeon.md  papersusingaeon.md  projects.md  related_software.rst  roadmap.rst  tutorials.rst  user_guide.md  user_guide.rst  users.rst
examples/: 01_forecasting.ipynb  01a_forecasting_sklearn.ipynb  01b_forecasting_proba.ipynb  01c_forecasting_hierarchical_global.ipynb  02_classification.ipynb  02a_classification_multivariate_cnn.ipynb  02b_classification_multivariate_lstmfcn.ipynb  03_transformers.ipynb  04_benchmarking.ipynb  AA_datatypes_and_datasets.ipynb  catch22.ipynb  channel_selection.ipynb  classification.ipynb  deep_learning.ipynb  dictionary_based_classification.ipynb  distances.ipynb  early_classification.ipynb  feature_extraction_with_tsfresh.ipynb  hidalgo_segmentation.ipynb  interpolation.ipynb  loading_data.ipynb  minirocket.ipynb  mlflow.ipynb  partition_based_clustering.ipynb  plateau_finder.ipynb  rocket.ipynb  segmentation_with_clasp.ipynb  shapelet_based.ipynb  signature_method.ipynb  theta_transform.ipynb  window_splitters.ipynb
extension_templates/: annotation.py  classification.py  clustering.py  dist_kern_panel.py  dist_kern_tab.py  distance.py  early_classification.py  forecasting.py  forecasting_simple.py  transformer.py  transformer_simple.py
radar_litetime/: README.md  predict_folder.py  test.py  train.py
radar_multirocket/: README.md  data_utils.py  predict_folder.py  test.py  train.py
sample_tests/: Tracking Differentiator-based Multiview Dilated Characteristics.ipynb  issues.txt  runner.ipynb  scratch_1.py  test_enum_clustering.py
sktime/: __init__.py  _config.py
tests/: test_generate_developer_tables.py
(+3339 files in other folders)
