[aliases]
test = pytest

[tool.isort]
profile = "black"
multi_line_output = 3

[tool:pytest]
# ignore certain folders and pytest warnings
testpaths = aeon
addopts =
    --doctest-modules
    --durations 20
    --timeout 600
    --showlocals
    --numprocesses auto
filterwarnings =
    ignore::UserWarning
    ignore:numpy.dtype size changed
    ignore:numpy.ufunc size changed

[flake8]
# Default flake8 3.5 ignored flags
ignore = E121, E123, E126, E226, E24, E704, W503, W504
# inline with Black code formatter
max-line-length = 88
extend-ignore =
    # See https://github.com/PyCQA/pycodestyle/issues/373
    E203

[metadata]
description_file = README.md
long_description_content_type = text/markdown

[check-manifest]
ignore =
    .binder/**
    build_tools/**
    docs/**
    examples/**
    .all-contributorsrc
    .coveragerc
    CODEOWNERS
    CONTRIBUTING.md
    Makefile
    *.yaml
    *.yml

[isort]
profile = black

[pydocstyle]
convention = numpy
match = (?!test_).*\.py

[bdist_wheel]
universal = false

[sdist]
formats = gztar
